# flood-mapping-tool

./: .env_template  .gitignore  .pre-commit-config.yaml  README.md  example.ipynb  pyproject.toml  requirements.txt
.github/workflows/: huggingface-deploy.yml
app/: Home.py
app/pages/: 0_AOIs.py  0_🌍_AOIs.py  0_🌍_Areas_Of_Interest.py  1_🌍_Flood_extent_analysis.py  1_💧_Flood_Analysis.py  1_💧_Flood_extent_analysis.py  2_📖_Documentation.py  2_📖_Methodology.py
app/src/: config_parameters.py  db.py  gfm.py  hf_utils.py  utils.py
bboxes/: bboxes.json
output/: EU_E036N006T3_ADVFLAG_20250124T060225__VV_D110_E036N006T3_EQUI7_EU020M_V0M2R2_S1_20250124.tif  EU_E036N006T3_CGLS-LC100____V301-2019_E036N006T3_EU020M_V01R01_PROBAV_5702476_20250124.tif  EU_E036N006T3_ENSEMBLE_EXCLAYER_20250124T060225_VV_EU020M_E036N006T3_20250124.tif  EU_E036N006T3_ENSEMBLE_FLOOD_20250124T060225_VV_EU020M_E036N006T3_20250124.geojson  EU_E036N006T3_ENSEMBLE_FLOOD_20250124T060225_VV_EU020M_E036N006T3_20250124.tif  EU_E036N006T3_ENSEMBLE_OBSWATER_20250124T060225_VV_EU020M_E036N006T3_20250124.tif  EU_E036N006T3_GHS-POP_E2020_GLOBE_R2022A_E036N006T3_EU020M_100_V1_5702476_20250124.tif  EU_E036N006T3_REFERENCE_WATER_OUT_S1-_IW_GRDH_1S-V_20170101T055325_20210131T180959_MONTH-_E036N006T3_EU020M_V04_20250124.tif  EU_E036N006T3_sentinel-1_footprint_5702476_20250124.geojson  EU_E036N006T3_sentinel-1_metadata_5702476_20250124.json  EU_E036N006T3_sentinel-1_schedule_5702476_20250124.geojson  README.html
