[project]
name = "flood-mapping-gfm"
version = "0.1.0"
description = "A streamlit app to map gfm flood forecasts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "geopandas>=1.0.1",
    "folium>=0.19.4",
    "python-dotenv==1.0.1",
    "streamlit>=1.41.1",
    "streamlit-folium>=0.24.0",
    "ipykernel>=6.29.5",
    "geojson>=3.2.0",
]
